<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameLabel"
            style="@style/roboto_20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/name"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameText"
            app:layout_constraintEnd_toEndOf="@id/descriptionLabel"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nameText"
            style="@style/roboto_20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:hint="@string/enter_the_shoe_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nameLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/companyLabel"
            style="@style/roboto_20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/company"
            app:layout_constraintBaseline_toBaselineOf="@+id/companyText"
            app:layout_constraintEnd_toEndOf="@+id/descriptionLabel"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/companyText"
            style="@style/roboto_20"
            app:layout_constraintStart_toEndOf="@id/companyLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:hint="@string/enter_the_shoe_company"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameText" />

        <TextView
            android:id="@+id/sizeLabel"
            style="@style/roboto_20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/size"
            app:layout_constraintBaseline_toBaselineOf="@+id/sizeText"
            app:layout_constraintEnd_toEndOf="@+id/descriptionLabel"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/sizeText"
            style="@style/roboto_20"
            app:layout_constraintStart_toEndOf="@id/sizeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:hint="@string/enter_the_shoe_size"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyText" />

        <TextView
            android:id="@+id/descriptionLabel"
            style="@style/roboto_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/description"
            app:layout_constraintBaseline_toBaselineOf="@+id/descriptionText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/descriptionText"
            style="@style/roboto_20"
            app:layout_constraintStart_toEndOf="@id/descriptionLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:hint="@string/enter_the_shoe_description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sizeText" />

        <Button
            android:id="@+id/cancelBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/saveBt"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/saveBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelBt"
            app:layout_constraintTop_toTopOf="@id/cancelBt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>