<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <TextView
            android:id="@+id/emailLabel"
            style="@style/roboto_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/e_mail"
            app:layout_constraintBottom_toTopOf="@id/passwordLabel"
            app:layout_constraintEnd_toStartOf="@id/emailEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <TextView
            android:id="@+id/passwordLabel"
            style="@style/roboto_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/password"
            app:layout_constraintEnd_toStartOf="@id/passwordEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLabel"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline"
            app:layout_constraintWidth_percent="0.25" />

        <EditText
            android:id="@+id/emailEdit"
            style="@style/login_edit_text"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/emailLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/emailLabel" />

        <EditText
            android:id="@+id/passwordEdit"
            style="@style/login_edit_text"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/passwordLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/passwordLabel" />

        <Button
            android:id="@+id/createAccountButton"
            android:text="@string/create_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/login_button" />

        <Button
            android:id="@+id/loginButton"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/createAccountButton"
            style="@style/login_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>